--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 						</p>
 						<ul class="actions">
 							<li><a href="https://github.com/S-ahmed75" target="_blank" class="button">View Projects</a></li>
+							<li><a href="https://github.com/S-ahmed75/certificates" target="_blank" class="button">View Certificates</a></li>
 						</ul>
 					</section>
 
@@ -99,8 +100,8 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/DATA SCIENCE.jpeg" class="image fit thumb"><img src="images/DATA SCIENCE.jpeg" alt="" /></a>
-								<h3>Revolutionary Data Science Innovations Coming Soon!</h3>
-								<p>Machine Learning, Training Model, Regression,Data Pipeline, A/B testing module etc</p>
+								<h3>Data Science: Employee Churn Prediction - Streamlit App!</h3>
+								<p>Streamlit web application for predicting employee churn (whether an employee is likely to leave or stay) using a machine learning pipeline. This project aims to empower HR teams with data-driven insights to improve employee retention.!</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/sql.jpeg" class="image fit thumb"><img src="images/sql.jpeg" alt="" /></a>
@@ -149,8 +150,8 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										Wireless Gate, Golden Town<br />
-										Shah Faisal Colony, Karachi<br />
+										Wireless Gate, Shah Faisal Colony<br />
+										Main Shahra-e-Faisal, Karachi<br />
 										Pakistan
 									</li>
 									<li>
