--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">Ahmed.sarfaraz@gmail.com</a>
+										<a href="#">Ahmed.sarfaraz7575@gmail.com</a>
 									</li>
 								</ul>
 							</div>
