--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/sql.jpeg" class="image fit thumb"><img src="images/sql.jpeg" alt="" /></a>
-								<h3>Coming Soon: Groundbreaking SQL Server Project!</h3>
+								<h3>Groundbreaking SQL Server Project!</h3>
 								<p>Data Storage, Query Processing, Transaction Management, Indexing, Backup and Recovery, Security, Performance Tuning, Monitoring and Maintenance</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -115,7 +115,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/oracle.jpg" class="image fit thumb"><img src="images/oracle.jpg" alt="" /></a>
-								<h3>Coming Soon: Transforming Data Management with Oracle Cloud Solutions</h3>
+								<h3>Transforming Data Management with Oracle Cloud Solutions</h3>
 								<p>Oracle Cloud Data Management: Empowering Seamless Data Integration, Migration, and Optimization.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
