--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 								<p>Data Storage, Query Processing, Transaction Management, Indexing, Backup and Recovery, Security, Performance Tuning, Monitoring and Maintenance</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/excel.jpeg" class="image fit thumb"><img src="images/excel.jpeg" alt="" /></a>
-								<h3>"Unlocking Data Potential: Excel's Power in Business Insights and Analysis"</h3>
-								<p>Data Entry, Formatting, Formulas and Functions, Data Analysis, Pivot Tables, Power Queries, Charts and Graphs, Conditional Formatting, Data Validation, Macros and VBA Programming, Collaboration and Sharing.</p>
+								<a href="images/bot.jpeg" class="image fit thumb"><img src="images/bot.jpeg" alt="" /></a>
+								<h3>No Code Gen AI chat bot for suggesting Meal for healing!</h3>
+								<p>This tool will help create a personalized meal plan considering your health conditions and dietary needs. Please provide your health condition and any dietary restrictions, and I'll generate a suitable meal plan for you. Always consult with your healthcare provider before making significant changes to your diet.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/oracle.jpg" class="image fit thumb"><img src="images/oracle.jpg" alt="" /></a>
