--- a/index.html
+++ b/index.html
@@ -17,15 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/PHOTO.jpg" alt="" /></a>
-					<h1>I am
-					Sarfaraz Ahmed
-					<br> Data Analyst | Data Scientist
-					<br> SQL / Oracle Developer 
-					<br> Python Developer
-					<br> Mobile Application Developer
-					<br> MS Office Developer 
-					<br> Power BI developer
-					<br></h1>
+					<h1>"I am Sarfaraz Ahmed - A Multidisciplinary Data 
+					& Software Professional, building intelligent solutions across analytics, automation, and app development."<br><br><br><br>
+					</h1>
 				</div>
 			</header>
 
