--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Explore the Realm of Portfolio Success
+							<span  font-weight: bold;"><h2>Explore the Realm of Portfolio Success</span>
 							</h2>
 						</header>
 						<p>✔️ Drawing on my experience as a Data Analyst, I've made impactful contributions across diverse sectors including Manufacturing, Textile, and Startups, driving initiatives to maximize profits, reduce costs, and innovate in dashboard design &amp; development.
@@ -53,28 +53,28 @@
 							
 							<br>
 							
-							✔️ Data Analyst: Excel proficiency extends to designing dashboards for daily reporting, Sales Optimization, and Shares Management.
+							✔️ <span style="font-size: 1.3em; font-weight: bold;">Data Analyst:</span> Designs interactive dashboards for daily reporting, sales performance, and share management using Excel.
 							<br>
 							<br>
-							✔️ Aspiring Data Scientist: Proficiency in Python extends to developing advanced machine learning models for predictive analytics, Natural Language Processing, and Image Recognition.
+							✔️ <span style="font-size: 1.3em; font-weight: bold;">Aspiring Data Scientist:</span> Skilled in Python-based machine learning for predictive analytics, NLP, and image recognition.
 							<br>
 							<br>
-							✔️ SQL / Oracle Developer: Excel proficiency extends to designing dashboards for daily reporting, Sales Optimization, and Shares Management.
+							✔️ <span style="font-size: 1.3em; font-weight: bold;">SQL / Oracle Developer:</span> Develops data pipelines and dashboards using advanced SQL for reporting and performance optimization.
 							<br>
 							<br>
-							✔️ Python Developer: Excel proficiency extends to designing dashboards for daily reporting, Sales Optimization, and Shares Management.
+							✔️ <span style="font-size: 1.3em; font-weight: bold;">Python Developer:</span> Automates business processes and creates analytics dashboards with Python and data libraries.
 							<br>
 							<br>
-							✔️ MS Office Developer: Excel proficiency extends to designing dashboards for daily reporting, Sales Optimization, and Shares Management.
+							✔️ <span style="font-size: 1.3em; font-weight: bold;">MS Office Developer:</span> Crafts automated Excel-based tools and reporting dashboards for streamlined operations.
 							<br>
 							<br>
-							✔️ Power BI Developer: Adeptness in Power BI ensures robust performance tracking solutions.
+							✔️ <span style="font-size: 1.3em; font-weight: bold;">Power BI Developer:</span> Builds impactful Power BI dashboards to track KPIs, visualize trends, and support decision-making.
 							<br>
 							<br>
-							✔️ IOS Developer: Use Swift for building high-performance native iOS applications with modern syntax and security features.
+							✔️ <span style="font-size: 1.3em; font-weight: bold;">IOS Developer:</span> Develops secure, high-performance iOS apps using Swift and modern Apple frameworks.
 							<br>
 							<br>
-							✔️ Flutter Developer: Utilize Dart with Flutter to create visually appealing, responsive cross-platform apps for both iOS and Android from a single codebase.
+							✔️ <span style="font-size: 1.3em; font-weight: bold;">Flutter Developer:</span> Creates cross-platform mobile apps with Flutter and Dart, combining performance and elegant UI design.
 
 						</p>
 						<ul class="actions">
